--- a/natalie2.0/package.json
+++ b/natalie2.0/package.json
@@ -2,6 +2,7 @@
   "name": "natalie2.0",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nathesloth.github.io/natalieysmith2/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
